18 OCT 2023:
    - Venezuela now has the correct music file
    - Update New Zealand (normal mode)
    - Create new secondary general menu (bug reports, etc)

17 OCT 23:
    - Add Metal Mode, toggleable in settings. (default: off);
    - Add play/pause, replay buttons
    
16 OCT 2023:
    - Countries that have been displayed within the past 10 rounds are no longer candidates for the next country.
    - (hopefully) improved SEO
    
15 OCT 2023:
    - Implement changelog
    - Update Info modal
    - Add Google Analytics
    - Add animated world map in title screen
    - TODO page now displays the same way as changelog
    - Slight UI improvements
    - Song now pauses when incorrect
    - All available countries now have songs
    - OFFICIAL RELEASE DAY YAYY :D