@@ -65,9 +65,10 @@
     </form>
     <h1 class="text-lg"><i class="fas fa-bug mr-2 fa-xl"></i> Spotted a bug? Report it <a target="_blank" class='underline' href="https://github.com/bean-frog/tuneguessr/issues">here.</a></h1>
     <h1 class="text-lg"><i class="fas fa-headphones mr-2 fa-xl"></i> Song too obscure? Suggest a new one  <a target="_blank" class='underline' href="https://github.com/bean-frog/tuneguessr/issues/1">here.</a></h1>
-    
-    <div class="modal-action">
-          <form method="dialog">
+    <h1 class="text-lg"><i class="fas fa-book mr-2 fa-xl"></i> Check out the <a target="_blank" class='underline' href=" https:bean-frog.github.io/blog/index.html?articleId=4">Guide</a></h1>
+        <div class="modal-action">
+          <form method="dialog">   
+
             <button class="btn">Done</button>
           </form>
         </div>        
